OpenJ9 HeapFragger Options
Added OpenJ9 GC options to HeapFragger cmd params

Signed-off-by: Salman Rana <salman.rana@ibm.com>